--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "test": "NODE_ENV=test mocha",
-    "test:cov": "NODE_ENV=test ./node_modules/mocha/bin/_mocha -- -R spec"
+    "test:cov": "NODE_ENV=test ./node_modules/mocha/bin/_mocha -- -R spec",
+    "mocha": "./node_modules/.bin/mocha -u bdd"
   },
   "repository": {
     "type": "git",
