--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,11 @@ node_js:
 - '8'
 - '9'
 
-script:
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+  - export PATH="$HOME/.yarn/bin:$PATH"
+  - yarn add -D mocha chai
+cache:
+  yarn: true
+  
 script: npm run mocha
