--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ node_js:
 - '9'
 
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.5.1
   - export PATH="$HOME/.yarn/bin:$PATH"
   - yarn add -D mocha chai
 cache:
   yarn: true
-  
+
 script: npm run mocha
